--- a/final/index.css
+++ b/final/index.css
@@ -61,3 +61,17 @@ body {
     overflow-x: scroll;
     white-space: pre;
   }
+
+  .img-fluid {
+    max-width: 100%;
+    height: auto;
+  }
+
+  .image1 {
+    max-width: 50%;
+    height: auto;
+  }
+  .image2, .image3 {
+    max-width: 25%;
+    height: auto;
+  }
